managed/PS2.UnityShim/Internal/Native.g.cs


        // Rigidbody.AddForce in Force mode; the accumulator is cleared each step.
        [DllImport("__Internal")]
        internal static extern void ps2ur_phys_body_add_force(int body, float x, float y, float z);

        // Rigidbody.linearDamping / angularDamping. Separate from add_body because they are settable at any time; a body created without them would silently ignore what the scene exported.
        [DllImport("__Internal")]
        internal static extern void ps2ur_phys_body_set_damping(int body, float linearDamping, float angularDamping);

        // Rigidbody.useGravity / isKinematic / freezeRotation. add_body takes the first two as well, but only as initial values; without this setter changing either after binding would be a property that reads back what you set and changes nothing.
        [DllImport("__Internal")]
        internal static extern void ps2ur_phys_body_set_flags(int body, int useGravity, int isKinematic, int freezeRotation);

        // Colliders in the table, including the ones the PHYS section baked. Walked once at boot to map collider indices to GameObjects for the contact callbacks.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_collider_count();

        // The entity HANDLE a collider rides on, or 0 for baked static geometry that belongs to no entity.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_collider_entity(int index);

        // The collider index riding on an entity, or -1. Baked colliders arrive from the PHYS section already bound to their entity.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_collider_for_entity(int handle);

        // Creates a CharacterController on an entity. Dimensions and center are WORLD units (the managed shim applies Unity's transform scaling). Returns its index, or -1.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_add_character(int handle, float radius, float height, float slopeLimit, float stepOffset, float centerX, float centerY, float centerZ);

        // CharacterController.Move. Writes the position reached back to the entity transform and returns Unity's CollisionFlags bits.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_move_character(int index, int handle, float x, float y, float z);

        // CharacterController.isGrounded.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_character_grounded(int index);

        // Starts a clip on the mixer and returns its voice handle, or 0 when every voice is busy with something more important -- a dropped sound is normal, never an error. Looping is baked into the clip at encode. When 'spatial' is nonzero the voice registers for per-frame pan/attenuation against the entity named by 'entity_handle' (M12.5 task 2).
        [DllImport("__Internal")]
        internal static extern int ps2ur_audio_play(int entity_handle, int clip, float volume, int priority, int spatial, float min_distance, float max_distance);

        // Stops a voice. 0 and stale handles are no-ops.
        [DllImport("__Internal")]
        internal static extern void ps2ur_audio_stop(int voice);

        // 1 while the voice is sounding. AudioSource.isPlaying reads this.
        [DllImport("__Internal")]
        internal static extern int ps2ur_audio_is_playing(int voice);

        // Live volume change on a sounding voice. A spatial voice keeps its per-frame pan; a 2D voice sits centred.
        [DllImport("__Internal")]
        internal static extern void ps2ur_audio_set_volume(int voice, float volume);

        // Clips loaded from the SND section.
        [DllImport("__Internal")]
        internal static extern int ps2ur_audio_clip_count();

        // A clip's duration in seconds, from its sample count and pitch. AudioClip.length reads this.
        [DllImport("__Internal")]
        internal static extern float ps2ur_audio_clip_seconds(int clip);

        // PlayerPrefs.SetInt into the M10 memcard store (in memory until ps2ur_prefs_save). Keys cap at 24 bytes, the store at 64 entries (deviation 28). cstr use is deliberate: cold path, tiny strings, and hashed keys would make GetString impossible.
        [DllImport("__Internal")]
        internal static extern void ps2ur_prefs_set_int(string key, int value);

        // PlayerPrefs.SetFloat.
        [DllImport("__Internal")]
        internal static extern void ps2ur_prefs_set_float(string key, float value);

        // PlayerPrefs.SetString. Values cap at 48 bytes (deviation 28).
        [DllImport("__Internal")]
        internal static extern void ps2ur_prefs_set_string(string key, string value);

        // PlayerPrefs.GetInt with its fallback.
        [DllImport("__Internal")]
        internal static extern int ps2ur_prefs_get_int(string key, int fallback);

        // PlayerPrefs.GetFloat with its fallback.
        [DllImport("__Internal")]
        internal static extern float ps2ur_prefs_get_float(string key, float fallback);

        // PlayerPrefs.HasKey.
        [DllImport("__Internal")]
        internal static extern int ps2ur_prefs_has_key(string key);

        // PlayerPrefs.DeleteKey.
        [DllImport("__Internal")]
        internal static extern void ps2ur_prefs_delete_key(string key);

        // PlayerPrefs.DeleteAll.
        [DllImport("__Internal")]
        internal static extern void ps2ur_prefs_delete_all();

        // Byte length of a string value, or -1 when the key is absent or not a string. A returned pointer would need an owner the boundary refuses to have, so GetString reads length + bytes and caches managed-side.
        [DllImport("__Internal")]
        internal static extern int ps2ur_prefs_string_length(string key);

        // Byte at index of a string value, or -1 past the end. Cold path by design: a 48-byte value read once and cached.
        [DllImport("__Internal")]
        internal static extern int ps2ur_prefs_string_byte(string key, int index);

        // Writes the store to memory card port 0 under the identity the host set at boot. Returns memcard::Status: 0 Ok, then NoCard, NotFormatted, Full, WriteProtected, NotFound, Error. Unity's Save cannot fail; this one reports through PS2Memory.LastSaveError (deviation 29).
        [DllImport("__Internal")]
        internal static extern int ps2ur_prefs_save();

        // PS2ParticleSystem.Play (ADR-011): starts emission and fires the authored burst. Addressed by the owning entity's handle.
        [DllImport("__Internal")]
        internal static extern void ps2ur_particles_play(int entity_handle);

        // PS2ParticleSystem.Stop: emission ceases, live particles play out -- Unity's Stop semantics.
        [DllImport("__Internal")]
        internal static extern void ps2ur_particles_stop(int entity_handle);

        // PS2ParticleSystem.Emit(count). Spawns up to the pool's remaining capacity; the budget is the contract.
        [DllImport("__Internal")]
        internal static extern void ps2ur_particles_emit(int entity_handle, int count);

        // 1 while the system is emitting.
        [DllImport("__Internal")]
        internal static extern int ps2ur_particles_is_playing(int entity_handle);

        // Live particles right now; PS2ParticleSystem.particleCount.
        [DllImport("__Internal")]
        internal static extern int ps2ur_particles_count(int entity_handle);

        // The uGUI draw-table index for an entity, or -1. Elements are flat-table indexed like colliders; managed UI components hold this for their setters.
        [DllImport("__Internal")]
        internal static extern int ps2ur_ui_element_for_entity(int entity_handle);

        // Moves/resizes an element in screen pixels, top-left origin. Layout was baked at export; this is how scripts (and the Slider fill) animate it.
        [DllImport("__Internal")]
        internal static extern void ps2ur_ui_set_rect(int element, float x, float y, float w, float h);

        // The element's CURRENT tint, RGBA8 with alpha in the PS2 0..0x80 range. CreateUIGraphic seeds the managed Graphic from this so the focus highlight can restore the AUTHORED colour, not an assumed white. Out-of-range elements return opaque white.
        [DllImport("__Internal")]
        internal static extern uint ps2ur_ui_get_colour(int element);

        // Tint, RGBA8 with alpha already in the PS2 0..0x80 range. Graphic.color and the navigation focus highlight write through this.
        [DllImport("__Internal")]
        internal static extern void ps2ur_ui_set_colour(int element, uint rgba);

        // Replaces a text element's string (48-byte cap, baked 8x8 font). cstr on a set-on-change path, not per frame.
        [DllImport("__Internal")]
        internal static extern void ps2ur_ui_set_text(int element, string text);

        // Console-side bloom for a text element: the glyph run is drawn again in a ring of 'spread' pixels, additively at 'intensity' (0..1) of its alpha, under the crisp run; 'dilate' (0..1) widens the inner ring. 0 intensity is plain text. PS2BootGlowText's UNITY_PS2 branch drives it.
        [DllImport("__Internal")]
        internal static extern void ps2ur_ui_set_text_glow(int element, float spread, float intensity, float dilate);

        // Shows/hides an element; Behaviour.enabled on the managed graphics.
        [DllImport("__Internal")]
        internal static extern void ps2ur_ui_set_visible(int element, int visible);

        // Text.alignment / TMP_Text.alignment: 0 left/top, 1 centre/middle, 2 right/bottom. Applied per line at draw time.
        [DllImport("__Internal")]
        internal static extern void ps2ur_ui_set_align(int element, int align_h, int align_v);

        // The authored alignment of an element: align_h | (align_v << 8), so a graphic's managed view starts from what the exporter baked.
        [DllImport("__Internal")]
        internal static extern uint ps2ur_ui_get_align(int element);
    }
}
